--- a/style.css
+++ b/style.css
@@ -56,3 +56,5 @@ table {margin: 0; padding: 0; border-collapse: collapse;}
 tr {margin: 0; padding: 0;}
 
 h2 {background-color: white;}
+
+#test > p {background-color:white;}
