Polishing touches, font, etc.

--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 .align-left { float:left; margin: 0 15px 15px 0; }
 /* End Source: */
 
+body { font-family:"Bird Cherry", "Helvetica", "serif" }
+
 .center { margin-left:auto;
           margin-right:auto; }
 
